--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/status-bar": "4.3.0",
     "@ionic-native/transfer": "^3.14.0",
     "@ionic/storage": "2.0.1",
+    "angular2-swing": "^0.14.0",
     "cordova-browser": "5.0.1",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
